binrw/tests/ui/invalid_keyword_unit_enum.stderr
error: expected one of: `big`, `little`, `is_big`, `is_little`, `map`, `try_map`, `repr`, `magic`, `import`, `import_raw`
 --> tests/ui/invalid_keyword_unit_enum.rs:4:6
  |
4 | #[br(invalid_unit_enum_keyword)]
  |      ^^^^^^^^^^^^^^^^^^^^^^^^^
